# youtube_summary_backend

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: audio.rs  lib.rs  main.rs  openai_api.rs  process_youtube_video.rs
src/yt_audio/: analyzer.rs  assembling.rs  dispatcher.rs  error.rs  mod.rs  parser.rs  run.rs  yt_audio.rs
src/yt_audio/assembling/: youtube.rs
src/yt_audio/assembling/youtube/: config.rs  yt_playlist.rs  yt_video.rs
