[package]
name = "yt_summarizer_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
openai = "1.0.0-alpha.16"
rustube = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
dotenv = "*"
openai_api_rust = "0.1.9"
regex = "*"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
execute = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
spinoff = "0.8.0"
url = "2.3.1"
which = "4.4.0"


[[bin]]
name = "yt_summarizer_backend"
path = "src/main.rs"
test = false
